# hippocampus

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  RUNBOOK.md
migrations/: 001_initial.sql  002_session_ledger.sql  003_embeddings.sql
plans/v1/: prd-hippocampus-v1.md  tasks-hippocampus-v1.md
plans/v2/: prd-working-memory.md  tasks-working-memory.md
plans/v3/: prd-working-memory-v2.md  tasks-working-memory-v2.md
plans/v4/: prd-semantic-recall.md  tasks-semantic-recall.md
plans/v5/: prd-web-ui.md
plans/v6/: prd-st-provider.md
plans/v7/: prd-auto-trigger-hooks.md
scripts/: com.hippocampus.archive.plist.template  com.hippocampus.daemon.plist.template  com.hippocampus.inject.plist.template  install.sh  uninstall.sh
scripts/hooks/: session-start.sh.template  user-prompt-submit.sh.template
src/hippocampus/: __init__.py  config.py
src/hippocampus/cli/: __init__.py  main.py
src/hippocampus/clients/: __init__.py  hooks.py  injector.py  mcp_config.py  registry.py
src/hippocampus/dynamics/: __init__.py  archive.py  boost.py  decay.py  ranking.py
src/hippocampus/embeddings/: __init__.py  bench.py  fastembed_provider.py  search.py  st_provider.py  store.py
tests/: conftest.py
tests/e2e/: test_full_cycle.py
tests/integration/: test_auto_hooks.py  test_bench_and_st.py  test_mirror_and_mcp.py  test_semantic_recall.py  test_v03_features.py  test_web_api.py  test_working_block.py
tests/unit/: test_dynamics.py  test_injector.py  test_ledger.py  test_ranking.py  test_storage.py  test_working_block.py
(+15 files in other folders)
